--- a/src/main/resources/stylesheets/styles.css
+++ b/src/main/resources/stylesheets/styles.css
@@ -1,26 +1,47 @@
+* {
+  -button-blue: #007AFF;
+  -button-blue-hover: #005A9E;
+  -button-dark: #4d4d4d;
+  -button-dark-hover: #2e2e2e;
+  -button-disabled: #939393;
+}
+
 .app-view {
-  -fx-background-color: #2e7ecb;
+  -fx-background-color:radial-gradient(focus-distance 0% , center 50% 50% , radius 100% , rgb(108, 156, 164) 30%, rgb(41, 89, 103) 100%);;
 }
 
 .main-menu-view {
-  -fx-background-color: white;
+  -fx-background-color: #f5f5f5;
   -fx-padding: 20;
   -fx-spacing: 20;
   -fx-alignment: center;
   -fx-max-width: 35em;
   -fx-max-height: 30em;
-  -fx-background-radius: 10;
+  -fx-background-radius: 18;
 }
 
 .main-menu-title {
-  -fx-font-size: 24px;
+  -fx-font-size: 28px;
   -fx-font-weight: bold;
 }
 
-.player-list-box {
+.main-menu-player-list-box {
   -fx-alignment: center;
   -fx-padding: 10;
   -fx-spacing: 10;
+}
+
+.main-menu-player-row {
+  -fx-alignment: center-left;
+  -fx-max-width: 250px;
+  -fx-spacing: 10;
+}
+
+.main-menu-player-circle {
+}
+
+.main-menu-delete-player-button {
+  -fx-background-color: transparent;
 }
 
 .main-menu-add-player-buttons-box {
@@ -28,11 +49,43 @@
   -fx-alignment: center;
 }
 
-.player-row {
-  -fx-alignment: center-left;
-  -fx-max-width: 250px;
-  -fx-spacing: 10;
+.main-menu-add-player-button {
+  -fx-background-color: -button-dark;
 }
 
+.main-menu-add-player-button:hover {
+  -fx-background-color: -button-dark-hover;
+}
+
+Button {
+  -fx-background-color: -button-blue;
+  -fx-text-fill: white;
+  -fx-font-size: 14px;
+  -fx-font-weight: bold;
+  -fx-background-radius: 10;
+  -fx-padding: 7 10;
+}
+
+Button:hover {
+  -fx-background-color: -button-blue-hover;
+  -fx-scale-x: 1.05;
+  -fx-scale-y: 1.05;
+}
+
+Button:pressed {
+  -fx-background-color: -button-blue-hover;
+  -fx-scale-x: 0.95;
+  -fx-scale-y: 0.95;
+}
+
+.button-disabled {
+  -fx-background-color: -button-disabled;
+}
+
+.button-disabled:hover {
+  -fx-background-color: -button-disabled;
+  -fx-scale-x: 1;
+  -fx-scale-y: 1;
+}
 
 
