--- a/src/main/resources/stylesheets/styles.css
+++ b/src/main/resources/stylesheets/styles.css
@@ -53,6 +53,15 @@
   -fx-background-color: -button-dark;
 }
 
+.main-menu-player-color-picker-popup {
+  -fx-background-color: white;
+  -fx-background-radius: 10;
+  -fx-padding: 20;
+  -fx-spacing: 10;
+  -fx-font-size: 18px;
+  -fx-effect: dropshadow(three-pass-box, black, 10, 0, 0, 0);
+}
+
 .main-menu-add-player-button:hover {
   -fx-background-color: -button-dark-hover;
 }
@@ -76,6 +85,10 @@ Button:pressed {
   -fx-background-color: -button-blue-hover;
   -fx-scale-x: 0.95;
   -fx-scale-y: 0.95;
+}
+
+.icon-only-button {
+  -fx-background-color: transparent;
 }
 
 .button-disabled {
