--- a/src/main/resources/stylesheets/styles.css
+++ b/src/main/resources/stylesheets/styles.css
@@ -412,7 +412,7 @@ Button:pressed {
 
 .grid-cell {
   -fx-cursor: hand;
-  -fx-fill: white;
+  -fx-fill: transparent;
   -fx-stroke: black;
   -fx-stroke-width: 1.5;
   -fx-stroke-type: inside;
@@ -434,6 +434,7 @@ Button:pressed {
   -fx-font-size: 8px;
   -fx-font-weight: bold;
   -fx-padding: 0 3 1 0;
+  -fx-text-fill: black;
 }
 
 .grid-cell-drag-preview {
