--- a/src/main/resources/stylesheets/styles.css
+++ b/src/main/resources/stylesheets/styles.css
@@ -246,10 +246,10 @@
   -fx-border-radius: 7;
 }
 
-.game-menu-game-log-scroll-pane {
+.scroll-pane {
   -fx-background-color: -gray-background;
   -fx-background-radius: 10;
-  -fx-border-color: black;
+  -fx-border-color: -gray-border;
   -fx-border-radius: 10;
   -fx-border-width: 1;
   -fx-max-height: infinity;
@@ -451,7 +451,6 @@ Button:pressed {
 }
 
 .grid-cell-has-portal {
-  -fx-fill: transparent;
   -fx-stroke: black;
   -fx-stroke-width: 1.5;
   -fx-stroke-type: inside;
@@ -493,21 +492,6 @@ Button:pressed {
   -fx-padding: 0 0 0 10;
 }
 
-.component-header {
-  -fx-padding: 0 0 15 0;
-  -fx-alignment: center-right;
-}
-
-.component-item {
-  -fx-background-color: white;
-  -fx-background-radius: 10;
-  -fx-padding: 15;
-  -fx-border-color: #E0E0E0;
-  -fx-border-radius: 10;
-  -fx-border-width: 1;
-  -fx-spacing: 10;
-}
-
 .component-item-header {
   -fx-alignment: center;
   -fx-spacing: 10;
@@ -530,4 +514,46 @@ Button:pressed {
 
 .board-config-spinner .spinner {
   -fx-pref-height: 32px;
+}
+
+.component-list-content {
+  -fx-padding: 10;
+  -fx-spacing: 10;
+}
+
+.component-item {
+  -fx-background-color: white;
+  -fx-background-radius: 10;
+  -fx-padding: 15;
+  -fx-border-color: #E0E0E0;
+  -fx-border-radius: 10;
+  -fx-border-width: 1;
+  -fx-spacing: 10;
+}
+
+.component-item-header {
+  -fx-alignment: center;
+  -fx-spacing: 10;
+}
+
+.from-to-field {
+  -fx-max-width: 60px;
+  -fx-alignment: center;
+  -fx-background-color: #F5F5F5;
+  -fx-border-color: #E0E0E0;
+  -fx-border-radius: 5;
+  -fx-padding: 5;
+}
+
+.delete-button {
+  -fx-background-color: transparent;
+  -fx-text-fill: #FF3B30;
+  -fx-font-size: 18px;
+  -fx-padding: 0;
+  -fx-cursor: hand;
+}
+
+.delete-button:hover {
+  -fx-scale-x: 1.2;
+  -fx-scale-y: 1.2;
 }
