--- a/src/main/resources/stylesheets/styles.css
+++ b/src/main/resources/stylesheets/styles.css
@@ -630,7 +630,11 @@ Button:pressed {
   -fx-scale-y: 1.2;
 }
 
-.ludo-board-cell {
+.ludo-board-cell-pane {
+  -fx-background-color: black;
+}
+
+.ludo-board-track-cell {
   -fx-stroke: black;
   -fx-stroke-width: 1;
   -fx-stroke-type: inside;
