--- a/src/main/resources/stylesheets/gameSelectionStyles.css
+++ b/src/main/resources/stylesheets/gameSelectionStyles.css
@@ -3,9 +3,10 @@
   -fx-padding: 20;
   -fx-spacing: 30;
   -fx-alignment: center;
-  -fx-max-height: 35em;
-  -fx-max-width: 55em;
+  -fx-max-height: 40em;
+  -fx-max-width: 60em;
   -fx-background-radius: 18;
+  -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.2), 10, 0, 0, 0);
 }
 
 .title {
@@ -28,6 +29,8 @@
   -fx-alignment: center;
   -fx-effect: dropshadow(three-pass-box, black, 6, 0, 0, 0);
   -fx-cursor: hand;
+  -fx-max-height: 375px;
+  -fx-max-width: 325px;
 }
 
 .game-box:hover {
